--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -20,11 +20,9 @@
 </head>
 
 <body>
-  <div class="loader">
-    <div class="pre-loader">
-      <span class="loader__dot"></span>
-      <span class="loader__dot"></span>
-      <span class="loader__dot"></span>
+  <div class="pre-loader">
+    <div class="load-icon">
+      <img src="https://raw.githubusercontent.com/niklausgerber/PreLoadMe/master/img/status.gif" alt="#">
     </div>
   </div>
   <section class="portfolio-page" data-aos="fade-up">
