--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 
 <body style="overflow-x: hidden;">
 
-  <div class="loader">
-    <div class="pre-loader">
-      <span class="loader__dot"></span>
-      <span class="loader__dot"></span>
-      <span class="loader__dot"></span>
+  <div class="pre-loader">
+    <div class="load-icon">
+      <img src="https://raw.githubusercontent.com/niklausgerber/PreLoadMe/master/img/status.gif" alt="#">
     </div>
   </div>
 
